<resources>
    <string name="app_name">Ghar Ki Kheti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_having_account_sign_up">Not having account? Sign Up</string>
    <string name="email_id">Email Id</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="fullname">FullName</string>
    <string name="register">REGISTER</string>
    <string name="mobile_number">mobile number</string>
    <string name="a1">सॉयल हेल्थ कार्ड (एसएचसी) योजना</string>
    <string name="a2">इस योजना के अंतर्गत किसान अपनी मिट्टी में उपलब्ध बड़े और छोटे पोषक तत्वों का पता लगा सकते हैं। इससे उर्वरकों का उचित प्रयोग करने और मिट्टी की उर्वरता सुधारने में मदद मिलेगी। नीम कोटिंग वाले यूरिया को बढ़ावा दिया गया है ताकि यूरिया के इस्तेमाल को नियंत्रित किया जा सके, फसल के लिए इसकी उपलब्धता बढ़ाई जा सके और उर्वरक की लागत कम की जा सके। घरेलू तौर पर निर्मित और आयातित यूरिया की संपूर्ण मात्रा अब नीम कोटिंग वाली है।</string>
    <string name="b1">परंपरागत कृषि विकास योजना</string>
    <string name="b2">परंपरागत कृषि विकास योजना (पीकेवीवाई) को लागू किया जा रहा है ताकि देश में जैव कृषि को बढ़ावा मिल सके। इससे मिट्टी की सेहत और जैव पदार्थ तत्वों को सुधारने तथा किसानों की आमदनी बढ़ाने में मदद मिलेगी।</string>
    <string name="c1">प्रधानमंत्री कृषि सिंचाई (पीएमकेएसवाई) योजना</string>
    <string name="c2">इस योजना को लागू किया जा रहा है ताकि सिंचाई वाले क्षेत्र को बढ़ाया जा सके, जिसमें किसी भी सूरत में सिंचाई की व्यवस्था हो, पानी की बर्बादी कम हो, पानी का बेहतर इस्तेमाल किया जा सके।</string>
    <string name="d1">राष्ट्रीय कृषि विपणन योजना (ई-एनएएम)</string>
    <string name="d2">राष्ट्रीय कृषि विपणन योजना की शुरूआत 14 अप्रैल 2016 को की गई थी। इस योजना से राष्ट्रीय स्तर पर ई-विपणन मंच की शुरूआत हो सकेगी और ऐसा बुनियादी ढांचा तैयार होगा जिससे देश के 585 नियमित बाजारों में मार्च 2018 तक ई-विपणन की सुविधा हो सकेगी। अब तक 13 राज्यों के 455 बाजारों को ई-एनएएम से जोड़ा गया है। यह नवाचार विपणन प्रक्रिया बेहतर मूल्य दिलाने, पारदर्शिता लाने और प्रतिस्पर्धा कायम करने में मदद करेगी, जिससे किसानों को अपने उत्पादो के लिए बेहतर पारिश्रमिक मिल सकेगा और "एक राष्ट्र एक बाजार" की दिशा में आगे बढ़ा जा सकेगा।</string>
    <string name="e1">प्रधानमंत्री फसल बीमा योजना (पीएमएफबीवाई)</string>
    <string name="e2">को खरीफ मौसम 2016 से लागू किया गया और यह कम प्रीमियम पर किसानों के लिए उपलब्ध है। इस योजना से कुछ मामलो में कटाई के बाद के जोखिमों सहित फसल चक्र के सभी चरणों के लिए बीमा सुरक्षा प्रदान की जाएगी। सरकार 3 लाख रुपये तक के अल्प अवधि फसल ऋण पर 3 प्रतिशत दर से ब्याज रियायत प्रदान करती है। वर्तमान में किसानों को 7 प्रतिशत प्रतिवर्ष की ब्याज दर से ऋण उपलब्ध है जिसे तुरन्त भुगतान करने पर 4 प्रतिशत तक कम कर दिया जाता है।</string>
    <string name="f1">ब्याज रियायत योजना 2016-17</string>
    <string name="f2">ब्याज रियायत योजना के अंतर्गत, प्राकृतिक आपदाओं की स्थिति में किसानों को राहत प्रदान करने के लिए 2 प्रतिशत की ब्याज रियायत पहले वर्ष के लिए बैंकों में उपलब्ध रहेगी। किसानों द्वारा मजबूरी में अपने उत्पाद बेचने को हतोत्साहित करने और उन्हें अपने उत्पाद भंडार गृहों की रसीद के साथ भंडार गृहों में रखने के लिए प्रोत्साहित करने के लिए ऐसे छोटे और मझौले किसानों को ब्याज रियायत का लाभ मिलेगा, जिनके पास फसल कटाई के बाद के 6 महीनों के लिए किसान क्रेडिट कार्ड होंगे।</string>
    <string name="g1">राष्ट्रीय कृषि विकास योजना (आरकेवीवाई)</string>
    <string name="g2">राष्ट्रीय कृषि विकास योजना को सरकार उनकी जरूरतों के मुताबिक राज्यों में लागू कर सकेगी, जिसके लिए राज्य में उत्पादन और उत्पादकता बढ़ाने पर विशेष ध्यान देना जरूरी है। राज्यों को उऩकी जरूरतों, प्राथमिकताओं और कृषि-जलवायु जरूरतों के अनुसार योजना के अंतर्गत परियोजनाओँ/कार्यक्रमों के चयन, योजना की मंजूरी और उऩ्हें अमल में लाने के लिए लचीलापन और स्वयत्ता प्रदान की गई है।</string>
    <string name="h1">राष्ट्रीय खाद्य सुरक्षा मिशन (एनएफएसएम)</string>
    <string name="h2">केन्द्र प्रायोजित योजना के अंतर्गत 29 राज्यों के 638 जिलों में एनएफएसएम दाल, 25 राज्यों के 194 जिलों में एनएफएसएम चावल, 11 राज्यों के 126 जिलों में एनएफएसएम गेहूं और देश के 28 राज्यों के 265 जिलों में एनएफएसएम मोटा अनाज लागू की गई है ताकि चावल, गेहूं, दालों, मोटे अऩाजों के उत्पादन और उत्पादकता को बढ़ाया जा सके। एनएफएसएम के अंतर्गत किसानों को बीजों के वितरण (एचवाईवी/हाईब्रिड), बीजों के उत्पादन (केवल दालों के), आईएनएम और आईपीएम तकनीकों, संसाधन संरक्षण प्रौद्योगिकीयों/उपकणों, प्रभावी जल प्रयोग साधन, फसल प्रणाली जो किसानों को प्रशिक्षण देने पर आधारित है, को लागू किया जा रहा है।</string>
    <string name="i1">राष्ट्रीय तिलहन और तेल (एनएमओओपी) मिशन कार्यक्रम</string>
    <string name="i2">राष्ट्रीय तिलहन और तेल मिशन कार्यक्रम 2014-15 से लागू है। इसका उद्देश्य खाद्य तेलों की घरेलू जरूरत को पूरा करने के लिए तिलहनों का उत्पादन और उत्पादकता को बढ़ाना है। इस मिशन की विभिन्न कार्यक्रमों को राज्य कृषि/बागवानी विभाग के जरिये लागू किया जा रहा है।</string>
    <string name="j1">बागवानी के समन्वित विकास के लिए मिशन (एमआईडीएच)</string>
    <string name="j2">केन्द्र प्रायोजित योजना फलों, सब्जियों के जड़ और कन्द फसलों, मशरूम, मसालों, फूलों, सुगंध वाले वनस्पति,नारियल, काजू, कोको और बांस सहित बागवानी क्षेत्र के समग्र विकास के लिए 2014-15 से लागू है। इस मिशन में ऱाष्ट्रीय बागवानी मिशन, पूर्वोत्तर और हिमालयी राज्यों के लिए बागवानी मिशन, राष्ट्रीय बागवानी बोर्ड, नारियल विकास बोर्ड और बागवानी के लिए केन्द्रीय संस्थान, नागालैंड को शामिल कर दिया गया है।</string>
    <string name="k1">पशुधन विपणन</string>
    <string name="k2">सरकार ने कृषि उत्पाद और पशुधन विपणन (संवर्धन और सरलीकरण) अधिनियम 2017 को तैयार किया जिसे राज्यों के संबद्ध अधिनियमों के जरिये उनके द्वारा अपनाने के लिए 24.04.2017 को जारी कर दिया गया। यह अधिनियम निजी बाजारों, प्रत्यक्ष विपणन, किसान उपभोक्ता बाजारों, विशेष वस्तु बाजारों सहित वर्तमान एपीएमसी नियमित बाजार के अलावा वैकल्पिक बाजारों का विकल्प प्रदान करता है ताकि उत्पादक और खरीददार के बीच बिचौलियों की संख्या कम की जा सके और उपभोक्ता के रुपए में किसान का हिस्सा बढ़ सके।</string>
    <string name="l1">न्यूनतम समर्थन मूल्य</string>
    <string name="l2">सरकार न्यूनतम समर्थन मूल्य के अंतर्गत गेहूं और धान को खरीद करती है। सरकार ने राज्यों/ संघ शासित प्रदेशों के अनुरोध पर कृषि और बागवानी से जुड़ी उन वस्तुओं की खरीद के लिए बाजार हस्ताक्षेप योजना लागू की है जो न्‍यूनतम समर्थन मूल्य योजना के अंतर्गत शामिल नहीं है। बाजार हस्ताक्षेप योजना इन फसलों की पैदावार करने वालों को संरक्षण प्रदान करने के लिए लागू की गई है ताकि वह अच्छी फसल होने पर मजबूरी में कम दाम पर अपनी फसलों को न बेचें।</string>
    <string name="ask_question">ASK QUESTION</string>

</resources>
